<b>2008-11-14</b>

* Feature: "Add" now automatically swaps last destination airport to be new source airport.
* Feature: In airport search, autosuggest better searches if there are no results.
* Feature: Close button added to map titles when filter is active (only when logged in).
* Feature: Trip reason "Other" added (#2168254).
* Feature: Default to listing flights in chronological order.
* Bug: "Clear" renamed as "Show all".
* Bug: AJAX "wait" swirlies cleared out better.
* Bug: Minutes of total time displayed correctly.
* Bug: Creating new trip now considered a change when editing a flight.
* Bug: New trip added to end of trip selector, not first position (corrects buggy behavior in editor).
* Bug: Clear airline code when moving between flights in editor.
* Bug: Comma character (,) now allowed in flight notes.
* Bug: Number of distinct airports was calculated incorrectly in some cases, fixed.
* Bug: Date validation is now stricter.
* Bug: Filter selections correctly reloaded after filter is cleared.
* Bug: Detailed flight list, if open, is redrawn after a flight is added or copied.

<b>2008-10-10</b>

* Problem with "Add and clear" causing double refresh fixed, bug 2139697 presumed closed
* Map no longer redrawn after minor edits

<b>2008-10-04</b>

* Airline search and recording added
* "Analyze" screen for stats added

<b>2008-10-03</b>

* Highlight user-entered airports in pink
* Validity checks for lat,lon,elevation
* Fix bug with loading countries from DAFIF

<b>2008-10-02</b>

* Increased default resolution of GC paths
* Manual implementation of forgotten password requests

<b>2008-10-01</b>

* Fixed major bug preventing new users from entering airlines
* Reload flight list after "delete" from flight list

<b>2008-09-30</b>

* Flights over 2000 mi now drawn as great circle routes, one segment per 1000 mi
* "Stats" renamed as "Top 10"
* Flight list not shown after "Add"

<b>2008-09-28</b>
